--- a/ProyectoVickyGaby2/nbproject/project.properties
+++ b/ProyectoVickyGaby2/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoVickyGaby2
-main.class=Main
+main.class=Interfaces.Pantalla
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
