crea el archivo pero falta mostrar📓

--- a/ProyectoVickyGaby2/nbproject/project.properties
+++ b/ProyectoVickyGaby2/nbproject/project.properties
@@ -39,7 +39,7 @@ includes=**
 jar.compress=false
 javac.classpath=
 # Space-separated list of extra javac options
-javac.compilerargs=\ --enable-preview
+javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
@@ -77,7 +77,7 @@ main.class=Proyecto.pkg2.pkg2425.pkg2.so.victoriagarcia.Proyecto224252SOVictoria
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_24
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
