--- a/ProyectoVickyGaby2/nbproject/project.properties
+++ b/ProyectoVickyGaby2/nbproject/project.properties
@@ -77,7 +77,7 @@ main.class=Proyecto.pkg2.pkg2425.pkg2.so.victoriagarcia.Proyecto224252SOVictoria
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_24
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
